# SmartContractAnalizer

./: .gitattributes  Cargo.toml  README.md  SECURITY.md
analyzers/: mod.rs
config/: mod.rs
examples/: security_analysis.rs
src/: analyzer.rs  error.rs  gas_optimizer.rs  gui.rs  gui.rs.bak  lib.rs  main.rs  mod.rs  security.rs  types.rs
src/models/: analysis_results.rs  contract.rs  issue.rs  metadata.rs  mod.rs  vuelnerability.rs
src/security/: control_flow_analyzers.rs  taint_analyzers.rs
