[package]
name = "smart_contract_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre"]
description = "Analizador de contratos inteligentes de Ethereum para detectar posibles estafas"
repository = ""
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.5"
hex = "0.4"
ethers = { version = "2.0", features = ["rustls"] }
ethers-solc = { version = "2.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
eframe = "0.24.1"
egui = "0.24.1"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
web3 = { version = "0.18", features = ["http"] }
