[package]
name = "smart_contract_analyzer"
version = "0.2.0"
edition = "2021"
authors = ["Tu Nombre"]
description = "Analizador avanzado de contratos inteligentes con soporte para múltiples blockchains y detección de vulnerabilidades"
repository = ""
license = "MIT"

[features]
default = ["gui"]
gui = ["eframe", "egui", "ethers", "reqwest", "tokio"]
cli = ["clap", "tokio", "ethers", "reqwest"]
api = ["warp", "tokio", "ethers", "reqwest"]
ethers = ["dep:ethers", "dep:ethers-solc"]
lru = ["dep:lru"]
once_cell = ["dep:once_cell"]

[dependencies]
# Error handling and serialization
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Blockchain and cryptography
ethers = { version = "2.0", features = ["rustls", "ws"], optional = true }
ethers-solc = { version = "2.0", optional = true }
web3 = { version = "0.18", default-features = false, features = ["http"], optional = true }

# User interface
eframe = { version = "0.22", optional = true, features = ["persistence"] }
egui = { version = "0.22", optional = true }

# Command line
clap = { version = "4.0", features = ["derive"], optional = true }

# Concurrency and networking
tokio = { version = "1.0", features = ["full"], optional = true }

# Web requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }

# Caching
lru = { version = "0.7.8", optional = true }
once_cell = { version = "1.10.0", optional = true }
warp = { version = "0.3", optional = true }

# Utilidades
colored = "2.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
regex = "1.5"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5"
serial_test = "1.0"
tempfile = "3.3"

[build-dependencies]
vergen = { version = "8.0", features = ["build"] }
